--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     // Compat and tools
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.auth0.android:jwtdecode:1.1.1'
+    implementation 'com.sumup:merchant-sdk:3.2.0'
 
     // Lifecycle and DI
     implementation 'androidx.lifecycle:lifecycle-livedata:2.0.0'
@@ -39,6 +41,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.19'
     implementation 'com.google.dagger:dagger-android:2.19'
     implementation 'com.google.dagger:dagger-android-support:2.19'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.19'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
