--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ch.japan_impact.japanimpactpos">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -13,8 +12,12 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".views.pos.POSActivity"
+                  android:screenOrientation="userLandscape"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
+        </activity>
         <activity
-                android:name=".LoginActivity"
+                android:name=".views.LoginActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ConfigurationPickerActivity">
+        <activity android:name=".views.ConfigurationPickerActivity">
         </activity>
     </application>
 
