--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".views.ConfigurationPickerActivity">
         </activity>
+        <activity android:name=".views.pos.CashPaymentActivity"
+                  android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
 </manifest>
