--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ch.japan_impact.japanimpactpos">
+          xmlns:tools="http://schemas.android.com/tools" package="ch.japan_impact.japanimpactpos">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,7 +11,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".views.pos.POSActivity"
                   android:screenOrientation="userLandscape"
                   android:configChanges="orientation|keyboardHidden|screenSize">
@@ -28,6 +28,8 @@
         <activity android:name=".views.ConfigurationPickerActivity">
         </activity>
         <activity android:name=".views.pos.CashPaymentActivity"
+                  android:theme="@style/Theme.AppCompat.Dialog"/>
+        <activity android:name=".views.pos.OrderSummaryActivity"
                   android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
