--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.auth0.android:jwtdecode:1.1.1'
     implementation 'com.sumup:merchant-sdk:3.2.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
     // Lifecycle and DI
     implementation 'androidx.lifecycle:lifecycle-livedata:2.1.0'
