--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
             android:name=".inject.JIPosApplication"
             android:allowBackup="true"
@@ -26,6 +27,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".views.ConfigurationPickerActivity">
+        </activity>
+        <activity android:name=".views.scan.ScanActivity">
         </activity>
         <activity android:name=".views.pos.CashPaymentActivity"
                   android:theme="@style/Theme.AppCompat.Dialog"/>
